# fpath-extended

./: CHANGES.md  LICENSE.fpath  README.md  dune-project  fpath-extended.opam  index.html
fpath-extended/: db.js  index.html
fpath-extended/Fpath_extended/: index.html
fpath-extended/Fpath_extended/Absolute_path/: index.html
fpath-extended/Fpath_extended/Classified_path/: index.html
fpath-extended/Fpath_extended/File_name/: index.html
fpath-extended/Fpath_extended/Fpath/: index.html
fpath-extended/Fpath_extended/Relative_path/: index.html
src/: dune  file_name.ml  file_name.mli  fpath0.ml  fpath0.mli  fpath_extended.ml  fpath_extended.mli  path.ml  path.mli
test/: dune  test__absolute_path.ml  test__classified_path.ml  test__file_name.ml  test__fpath.ml  test__fpath_extended.ml  test__relative_path.ml
